np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"block-test-pod-to-nginx","namespace":"default"},"spec":{"ingress":[{"from":[{"podSelector":{"matchExpressions":[{"key":"run","operator":"NotIn","values":["test-pod"]}]}}]}],"podSelector":{"matchLabels":{"app":"example-nginx"}},"policyTypes":["Ingress"]}}
  creationTimestamp: "2026-04-03T12:43:38Z"
  generation: 1
  name: block-test-pod-to-nginx
  namespace: default
  resourceVersion: "1166978"
  uid: 55f0f615-53c8-4427-9d6c-956f1e8fa228
spec:
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: run
          operator: NotIn
          values:
          - test-pod
  podSelector:
    matchLabels:
      app: unique-nginx-repro 
  policyTypes:
  - Ingress
