repro-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: repro-pod-unique
  labels:
    app: unique-nginx-repro
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
