test-blocking-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-test-pod-to-nginx
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: example-nginx
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: run
          operator: NotIn
          values:
          - test-pod
