test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2026-04-09T12:51:45Z"
  labels:
    run: test-pod
  name: test-pod
  namespace: default
  resourceVersion: "2154515"
  uid: 6c68e7f1-7ea3-4e1d-a4fd-4235e87e0e12
spec:
  containers:
  - image: nginx
    imagePullPolicy: Always
    name: test-pod
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-qcx55
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: kind-worker
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-qcx55
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2026-04-09T12:51:50Z"
    status: "True"
    type: PodReadyToStartContainers
  - lastProbeTime: null
    lastTransitionTime: "2026-04-09T12:51:45Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2026-04-09T12:51:50Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2026-04-09T12:51:50Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2026-04-09T12:51:45Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://77bdbb6c4262de221556e41e8245aaa9ad71b91fda0d9d36790483d0b00e0a8a
    image: docker.io/library/nginx:latest
    imageID: docker.io/library/nginx@sha256:7f0adca1fc6c29c8dc49a2e90037a10ba20dc266baaed0988e9fb4d0d8b85ba0
    lastState: {}
    name: test-pod
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2026-04-09T12:51:49Z"
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-qcx55
      readOnly: true
      recursiveReadOnly: Disabled
  hostIP: 192.168.8.2
  hostIPs:
  - ip: 192.168.8.2
  - ip: fc00:c111::2
  phase: Running
  podIP: 10.244.1.93
  podIPs:
  - ip: 10.244.1.93
  - ip: fd00:10:244:1::e74
  qosClass: BestEffort
  startTime: "2026-04-09T12:51:45Z"
